--- a/package.json
+++ b/package.json
@@ -13,13 +13,15 @@
 	"license": "MIT",
 	"main": "index.js",
 	"scripts": {
+		"pretest": "npm run --silent lint",
 		"test": "npm run --silent tests-only",
 		"tests-only": "es-shim-api --bound && npm run --silent test:shimmed && npm run --silent test:module && npm run --silent tests:es5",
 		"tests:es5": "npm run --silent test:promise-shimmed",
 		"test:shimmed": "node test/shimmed.js",
 		"test:module": "node test/index.js",
 		"test:promise-shimmed": "node test/promise-shimmed.js",
-		"test:native": "node --harmony-promise-finally test/native"
+		"test:native": "node --harmony-promise-finally test/native",
+		"lint": "eslint ."
 	},
 	"repository": {
 		"type": "git",
@@ -53,7 +55,9 @@
 	},
 	"devDependencies": {
 		"@es-shims/api": "^2.1.2",
+		"@ljharb/eslint-config": "^13.1.1",
 		"es6-shim": "^0.35.5",
+		"eslint": "^5.15.3",
 		"tape": "^4.10.1"
 	}
 }
