--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
 		"es6-shim": "^0.35.5",
 		"eslint": "^5.15.3",
 		"safe-publish-latest": "^1.1.2",
-		"tape": "^4.10.1"
+		"tape": "^4.10.1",
+		"typescript": "^3.4.4"
 	}
 }
