--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
 		"pretest": "npm run --silent lint && es-shim-api --bound",
 		"test": "npm run --silent tests-only",
 		"posttest": "npx aud",
-		"tests-only": "npm run --silent test:shimmed && npm run --silent test:module && npm run --silent tests:es5",
+		"tests-only": "npm run --silent test:shimmed && npm run --silent test:module && npm run --silent tests:es5 && npx tsc",
 		"tests:es5": "npm run --silent test:promise-shimmed",
 		"test:shimmed": "node test/shimmed.js",
 		"test:module": "node test/index.js",
