--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
 		"@ljharb/eslint-config": "^13.1.1",
 		"es6-shim": "^0.35.5",
 		"eslint": "^5.16.0",
+		"functions-have-names": "^1.1.0",
 		"safe-publish-latest": "^1.1.2",
 		"tape": "^4.10.1"
 	}
