[meta] add `funding` field

--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
 	"name": "promise.allsettled",
 	"version": "1.0.1",
-	"author": "Jordan Harband",
+	"author": "Jordan Harband <ljharb@gmail.com>",
+	"funding": {
+		"url": "https://github.com/sponsors/ljharb"
+	},
 	"contributors": [
 		{
 			"name": "Jordan Harband",
