--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
 	"dependencies": {
 		"array.prototype.map": "^1.0.1",
 		"define-properties": "^1.1.3",
-		"es-abstract": "^1.13.0",
+		"es-abstract": "^1.17.0-next.1",
 		"function-bind": "^1.1.1",
 		"iterate-value": "^1.0.0"
 	},
