--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,12 @@ os:
  - linux
 import:
  - ljharb/travis-ci:node/minors/gte_4.yml
+ - ljharb/travis-ci:node/minors/iojs.yml
  - ljharb/travis-ci:node/pretest.yml
  - ljharb/travis-ci:node/posttest.yml
+node_js:
+  - "0.12"
+  - "0.11"
 script:
   - 'if [ -n "${ES5-}" ]; then npm run tests:es5 ; fi'
   - 'if [ -n "${NATIVE-}" ]; then npm run test:native ; fi'
@@ -13,6 +17,8 @@ matrix:
   include:
     - node_js: "0.10"
       env: ES5=true
+    - node_js: "13"
+      env: NATIVE=true ALLOW_FAILURE=true
     - node_js: "12"
       env: NATIVE=true ALLOW_FAILURE=true
   allow_failures:
