--- a/package.json
+++ b/package.json
@@ -55,11 +55,11 @@
 		"node": ">= 0.4"
 	},
 	"dependencies": {
-		"array.prototype.map": "^1.0.1",
+		"array.prototype.map": "^1.0.2",
 		"define-properties": "^1.1.3",
-		"es-abstract": "^1.17.0-next.1",
+		"es-abstract": "^1.17.4",
 		"function-bind": "^1.1.1",
-		"iterate-value": "^1.0.1"
+		"iterate-value": "^1.0.2"
 	},
 	"devDependencies": {
 		"@es-shims/api": "^2.1.2",
