[Dev Deps] update `eslint`, `@ljharb/eslint-config`, `functions-have-names`, `tape`; add `aud`

--- a/package.json
+++ b/package.json
@@ -62,11 +62,12 @@
 	},
 	"devDependencies": {
 		"@es-shims/api": "^2.1.2",
-		"@ljharb/eslint-config": "^15.0.2",
+		"@ljharb/eslint-config": "^17.1.0",
+		"aud": "^1.1.2",
 		"es6-shim": "^0.35.5",
-		"eslint": "^6.7.2",
-		"functions-have-names": "^1.2.0",
+		"eslint": "^7.1.0",
+		"functions-have-names": "^1.2.1",
 		"safe-publish-latest": "^1.1.4",
-		"tape": "^4.11.0"
+		"tape": "^5.0.1"
 	}
 }
