--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
 		"posttest": "npx aud --production",
 		"tests-only": "nyc tape test/{implementation,index,shimmed}.js",
 		"test:promise-shimmed": "nyc node test/promise-shimmed",
-		"test:native": "nyc node --harmony-promise-finally test/native",
+		"test:native": "nyc node test/native",
 		"lint": "eslint ."
 	},
 	"repository": {
@@ -61,7 +61,7 @@
 		"@ljharb/eslint-config": "^17.1.0",
 		"aud": "^1.1.2",
 		"call-bind": "^1.0.0",
-		"es6-shim": "^0.35.5",
+		"es6-shim": "^0.35.6",
 		"eslint": "^7.1.0",
 		"functions-have-names": "^1.2.1",
 		"nyc": "^10.3.2",
