--- a/package.json
+++ b/package.json
@@ -51,16 +51,16 @@
 		"node": ">= 0.4"
 	},
 	"dependencies": {
-		"array.prototype.map": "^1.0.2",
+		"array.prototype.map": "^1.0.3",
+		"call-bind": "^1.0.2",
 		"define-properties": "^1.1.3",
-		"es-abstract": "^1.17.5",
+		"es-abstract": "^1.18.0-next.2",
 		"iterate-value": "^1.0.2"
 	},
 	"devDependencies": {
 		"@es-shims/api": "^2.1.2",
 		"@ljharb/eslint-config": "^17.4.0",
 		"aud": "^1.1.3",
-		"call-bind": "^1.0.2",
 		"es6-shim": "^0.35.6",
 		"eslint": "^7.18.0",
 		"functions-have-names": "^1.2.2",
