--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
 		"tests-only": "nyc tape test/{implementation,index,shimmed}.js",
 		"test:promise-shimmed": "nyc node test/promise-shimmed",
 		"test:native": "nyc node test/native",
-		"lint": "eslint ."
+		"lint": "eslint .",
+		"version": "auto-changelog && git add CHANGELOG.md",
+		"postversion": "auto-changelog && git add CHANGELOG.md && git commit --no-edit --amend && git tag -f \"v$(node -e \"console.log(require('./package.json').version)\")\""
 	},
 	"repository": {
 		"type": "git",
@@ -61,11 +63,20 @@
 		"@es-shims/api": "^2.1.2",
 		"@ljharb/eslint-config": "^17.4.0",
 		"aud": "^1.1.3",
+		"auto-changelog": "^2.2.1",
 		"es6-shim": "^0.35.6",
 		"eslint": "^7.18.0",
 		"functions-have-names": "^1.2.2",
 		"nyc": "^10.3.2",
 		"safe-publish-latest": "^1.1.4",
 		"tape": "^5.1.1"
+	},
+	"auto-changelog": {
+		"output": "CHANGELOG.md",
+		"template": "keepachangelog",
+		"unreleased": false,
+		"commitLimit": false,
+		"backfillLimit": false,
+		"hideCredit": true
 	}
 }
