--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
 		"call-bind": "^1.0.2",
 		"define-properties": "^1.1.3",
 		"es-abstract": "^1.18.0-next.2",
+		"get-intrinsic": "^1.0.2",
 		"iterate-value": "^1.0.2"
 	},
 	"devDependencies": {
