[actions] use `node/install` instead of `node/run`; use `codecov` action

--- a/.github/workflows/node-4+.yml
+++ b/.github/workflows/node-4+.yml
@@ -12,7 +12,6 @@ jobs:
       - uses: ljharb/actions/node/matrix@main
         id: set-matrix
         with:
-          versionsAsRoot: true
           preset: '>=4'
 
   latest:
@@ -21,18 +20,17 @@ jobs:
     runs-on: ubuntu-latest
 
     strategy:
-      matrix:
-        node-version: ${{ fromJson(needs.matrix.outputs.latest) }}
-        include:
-          - node-version: 0.12
+      matrix: ${{ fromJson(needs.matrix.outputs.latest) }}
 
     steps:
       - uses: actions/checkout@v2
-      - uses: ljharb/actions/node/run@main
-        name: 'npm install && npm run tests-only'
+      - uses: ljharb/actions/node/install@main
+        name: 'nvm install ${{ matrix.node-version }} && npm install'
         with:
           node-version: ${{ matrix.node-version }}
-          command: 'tests-only'
+      - run: npm run tests-only
+      - uses: codecov/codecov-action@v1
+
   minors:
     needs: [matrix, latest]
     name: 'non-latest minors'
@@ -41,17 +39,16 @@ jobs:
     runs-on: ubuntu-latest
 
     strategy:
-      matrix:
-        node-version: ${{ fromJson(needs.matrix.outputs.minors) }}
-        include:
-          - node-version: 0.11
+      matrix: ${{ fromJson(needs.matrix.outputs.minors) }}
 
     steps:
       - uses: actions/checkout@v2
-      - uses: ljharb/actions/node/run@main
+      - uses: ljharb/actions/node/install@main
+        name: 'nvm install ${{ matrix.node-version }} && npm install'
         with:
           node-version: ${{ matrix.node-version }}
-          command: 'tests-only'
+      - run: npm run tests-only
+      - uses: codecov/codecov-action@v1
 
   node:
     name: 'node 4+'
