--- a/.github/workflows/node-promise-shimmed.yml
+++ b/.github/workflows/node-promise-shimmed.yml
@@ -26,11 +26,12 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - uses: ljharb/actions/node/run@main
-        name: 'npm install && npm run test:native'
+      - uses: ljharb/actions/node/install@main
+        name: 'nvm install ${{ matrix.node-version }} && npm install'
         with:
           node-version: ${{ matrix.node-version }}
-          command: 'test:native'
+      - run: npm run test:promise-shimmed
+      - uses: codecov/codecov-action@v1
 
   node:
     name: 'node, native tests'
