--- a/package.json
+++ b/package.json
@@ -57,8 +57,8 @@
 		"array.prototype.map": "^1.0.3",
 		"call-bind": "^1.0.2",
 		"define-properties": "^1.1.3",
-		"es-abstract": "^1.18.0-next.2",
-		"get-intrinsic": "^1.0.2",
+		"es-abstract": "^1.18.0",
+		"get-intrinsic": "^1.1.1",
 		"iterate-value": "^1.0.2"
 	},
 	"devDependencies": {
