--- a/.github/workflows/node-promise-shimmed.yml
+++ b/.github/workflows/node-promise-shimmed.yml
@@ -1,4 +1,4 @@
-name: 'Tests: node.js: native'
+name: 'Tests: node.js: shimmed Promise'
 
 on: [pull_request, push]
 
@@ -13,11 +13,11 @@ jobs:
         id: set-matrix
         with:
           type: majors
-          preset: '>=12'
+          preset: '>= 1'
 
   majors:
     needs: [matrix]
-    name: 'majors, native tests'
+    name: 'majors, promise-shimmed tests'
     continue-on-error: true
     runs-on: ubuntu-latest
 
@@ -34,7 +34,7 @@ jobs:
       - uses: codecov/codecov-action@v1
 
   node:
-    name: 'node, native tests'
+    name: 'node, promise-shimmed tests'
     needs: [majors]
     runs-on: ubuntu-latest
     steps:
