--- a/.github/workflows/node-zero.yml
+++ b/.github/workflows/node-zero.yml
@@ -20,6 +20,7 @@ jobs:
     runs-on: ubuntu-latest
 
     strategy:
+      fail-fast: false
       matrix: ${{ fromJson(needs.matrix.outputs.stable) }}
 
     steps:
@@ -30,7 +31,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache-node-modules-key: node_modules-${{ github.workflow }}-${{ github.action }}-${{ github.run_id }}
           skip-ls-check: true
-      - run: npm run tests-only
+      - run: npm run test:promise-shimmed
       - uses: codecov/codecov-action@v1
 
   unstable:
@@ -41,6 +42,7 @@ jobs:
     runs-on: ubuntu-latest
 
     strategy:
+      fail-fast: false
       matrix: ${{ fromJson(needs.matrix.outputs.unstable) }}
 
     steps:
@@ -51,7 +53,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache-node-modules-key: node_modules-${{ github.workflow }}-${{ github.action }}-${{ github.run_id }}
           skip-ls-check: true
-      - run: npm run tests-only
+      - run: npm run test:promise-shimmed
       - uses: codecov/codecov-action@v1
 
   node:
