--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
 		"tests-only": "nyc tape test/{implementation,index,shimmed}.js",
 		"test:promise-shimmed": "nyc node test/promise-shimmed",
 		"test:native": "nyc node test/native",
-		"lint": "eslint .",
+		"lint": "eslint --ext=js,mjs .",
 		"version": "auto-changelog && git add CHANGELOG.md",
 		"postversion": "auto-changelog && git add CHANGELOG.md && git commit --no-edit --amend && git tag -f \"v$(node -e \"console.log(require('./package.json').version)\")\""
 	},
@@ -62,16 +62,16 @@
 		"iterate-value": "^1.0.2"
 	},
 	"devDependencies": {
-		"@es-shims/api": "^2.2.2",
-		"@ljharb/eslint-config": "^18.0.0",
+		"@es-shims/api": "^2.2.3",
+		"@ljharb/eslint-config": "^20.0.0",
 		"aud": "^1.1.5",
 		"auto-changelog": "^2.3.0",
 		"es6-shim": "^0.35.6",
-		"eslint": "^7.32.0",
+		"eslint": "^8.4.1",
 		"functions-have-names": "^1.2.2",
 		"nyc": "^10.3.2",
-		"safe-publish-latest": "^1.1.4",
-		"tape": "^5.3.1"
+		"safe-publish-latest": "^2.0.0",
+		"tape": "^5.3.2"
 	},
 	"auto-changelog": {
 		"output": "CHANGELOG.md",
